--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
 }
+
+
+
+#contactsection{
+    background-color:rgba(211, 211, 211, 0.776);
+}
+
+/* CSS FOOTER */
+
+footer{
+    background-color: #252525;
+}
+
+footer nav a img{
+    margin: 4rem 0rem 0rem 4rem;
+}
+
+footer nav ul li{
+    list-style: none;
+    text-decoration: none;
+    color: #fff;
+    display: inline;
+}
+
+footer nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    display: inline;
+}
+
+footer nav p{
+    text-align: center;
+    color: #fff
+}
+
