--- a/css/style.css
+++ b/css/style.css
@@ -256,19 +256,24 @@ max-width: 800px;
 
 /* CSS PRODUKT.html*/
 
-#headerphoto{
-    height: 360px;
-    background-size: cover;
-    width: 100%;
-    opacity: 0.5;
-    background-image:url(../img/portfolio_bkgr.png)
-    /*Måtte søke opp hvordan man gjorde et bilde gjennomsiktig. Se litteraturliste.*/
+.tekstbox{
+    position: relative;
 }
 
-#portoverskrift{
-    text-align: center;
-    padding:170px;
-    font-size: 2rem;
+.floatingtext{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    /* Brukt w3schools for å finne ut av hvordan man fikk teksten tydlig flytende over et bilde. Se litteraturliste*/
+}
+
+#textboxphoto{
+    width:100%;
+    height:450px;
+    opacity: 0.5;
+    /*Måtte søke opp hvordan man gjorde et bilde gjennomsiktig. Se litteraturliste.*/
 }
 
 .overskrifter{
